--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@ body {
   background-color:#000000;
   font-family: 'Federo', sans-serif;
   color:white;
+  text-decoration:none;
+}
+#work {
+  background: center no-repeat url('./img/work.jpg') ;
+}
+#art {
+  background: center no-repeat url('./img/art.jpg');
+}
+#contact {
+  background: center no-repeat url('./img/contact.jpg');
 }
 .rounded-circle {
   margin: 5px auto 0px;
@@ -12,7 +22,20 @@ body {
   border-radius: 50%;
 }
 .header {
-  font-size: 20px;
+  font-size: 30px;
   color:white;
   font-family: 'Federo', sans-serif;
+}
+.jumbotron {
+  line-height: 150px;
+}
+@media only screen and (min-width:560px){
+  .jumbotron {
+    line-height: 300px;
+  }	
+}
+@media only screen and (min-width:1100px){
+  .jumbotron {
+    line-height: 500px;
+  }
 }
