--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,20 @@ body {
   max-height: 100px;
   border-radius: 50%;
 }
+.center-link {
+  margin: 0 auto;
+}
+a {
+  color: #ffffff;
+}
+a:hover {
+  color: #e7e7e7;
+}
+hr {
+  border-top: 1px solid #ffffff; 
+}
 .header {
-  font-size: 30px;
+  font-size: 20px;
   color:white;
   font-family: 'Federo', sans-serif;
 }
@@ -33,9 +45,15 @@ body {
   .jumbotron {
     line-height: 300px;
   }	
+  .header {
+     font-size: 30px;
+   }
 }
 @media only screen and (min-width:1100px){
   .jumbotron {
     line-height: 500px;
   }
+  .header {
+     font-size: 50px;
+   }
 }
