--- a/src/index.css
+++ b/src/index.css
@@ -30,13 +30,16 @@ body {
   border: 2px solid red;
   margin: 0 auto;
 }
-.button-span {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
+.show-art {
+  height: 100%;
+  background-color: rgba(0,0,0,0);
+  border: none;
+  margin-bottom: 5px;
+  color: #e7e7e7;
+  font-size: 30px;
 }
-.button-span > * {
-  padding: 0 5px;
+.show-art i {
+  font-size: 50px;
 }
 .art-img {
   width: 100%;
