--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,17 @@ body {
   color:white;
   text-decoration:none;
 }
+::-webkit-scrollbar {
+  height: 10px;
+  background: rgba(0,0,0,0);
+}
+::-webkit-scrollbar-thumb:horizontal {
+  background: white;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-track:horizontal {
+  opacity: 0;
+}
 .padded-bottom {
   padding-bottom: 10px;
 }
@@ -17,6 +28,13 @@ body {
 }
 #contact {
   background: center no-repeat url('./img/contact.jpg');
+}
+#carousel-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  overflow-x: scroll;
+  padding-left: 0;
 }
 .job-wrapper {
   border: 5px inset #616161;
@@ -30,20 +48,12 @@ body {
   border: 2px solid red;
   margin: 0 auto;
 }
-.show-art {
-  height: 100%;
-  background-color: rgba(0,0,0,0);
-  border: none;
-  margin-bottom: 5px;
-  color: #e7e7e7;
-  font-size: 30px;
+.art-wrapper {
+  margin: 0 5px 0 0;
 }
-.show-art i {
-  font-size: 50px;
-}
-.art-img {
-  width: 100%;
-  height: 100%;
+.art-wrapper img {
+  max-height:300px;
+  width: auto;
 }
 .work-img {
   width: 100%;
